--- a/templates/user_dashboard.html
+++ b/templates/user_dashboard.html
@@ -1,6 +1,7 @@
-{% extends "base.html" %}
+{% extends 'base.html' %}
 {% block title %}User Dashboard{% endblock %}
 {% block content %}
-<h4 class="mb-3">Welcome User!</h4>
-<p>This is the normal user dashboard (recent bookings, search, etc.).</p>
+<h3>Welcome, {{ session.get('role')|capitalize }}!</h3>
+
+<p class="text-muted">User-side features (booking, release, history) go here.</p>
 {% endblock %}
